declarator/test/snippets/fail/headers/overloaded_function.h
/*
 * Copyright (c) New Cloud Technologies, Ltd., 2014-2021
 *
 * You can not use the contents of the file in any way without
 * New Cloud Technologies, Ltd. written permission.
 *
 * To obtain such a permit, you should contact New Cloud Technologies, Ltd.
 * at http://ncloudtech.com/contact.html
 *
 */

#pragma once

#include "TS.h"

TS_EXPORT double getNumber();

TS_EXPORT double capacity();
TS_EXPORT void capacity(double d);
